fix(typing-indicator): fixed on safari (#4760)

--- a/components/ui/User/State/State.less
+++ b/components/ui/User/State/State.less
@@ -36,7 +36,6 @@
     width: 6px;
     height: 6px;
     border-radius: @half;
-    position: relative;
     &:extend(.typing-state-animation);
   }
 }
